--- a/test/src/test.css
+++ b/test/src/test.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*@import url(https://cdn.staticfile.org/typo.css/1.1/typo.css);*/
-@import url(https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css);
+@import url(https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css);
 /* import必须放最顶上,否则就没了! */
 /*@charset "utf-8";*/
 
